fix view mode menu item hiding on mobile

--- a/src/Components/css/Menu.css
+++ b/src/Components/css/Menu.css
@@ -121,7 +121,7 @@
 
 /* Only allow changing view mode on non-mobile */
 @media (max-width: 680px) {
-  .menu .list #viewMode-carousel {
+  .menu .list #viewMode {
     display: none;
   }
 }
